金銭フロー整合性・契約ライフサイクル補完 (money-flow-consistency)
契約→勤怠→精算→請求/BP支払→Dashboard/営業成績/Excel の資金フロー全体の
整合性欠陥を横断的に是正 (R1〜R8)。

- R1/R2 契約ライフサイクルUI + 解約日確定: 契約一覧に編集・状態遷移を追加。
  成約由来ドラフトを編集→稼動化できるようにし、解約遷移で解約日(実質終了日)を
  必須化して end_date を確定。ContractStatusChangeRequest を新設。
- R3 集計口径統一: 共通サービス MonthlyRevenueCalcService を新設し、
  Dashboard(チャート/トレンド/KPI)・月次売上Excel・営業成績を契約単位フォールバック
  ＋準備中除外の同一口径へ委譲。KPI当月予想売上をチャート当月値と同一ソース化。
- R4 reopen手動BP保護 + confirm金額同期: 手動登録の多段BP階層(未払)を黙って
  物理削除せず拒否。再確定時に未払1階層目の金額を追従更新、支払済は通知。
- R5 営業成績「未帰属」行: 担当営業なしの稼動契約を合算表示し全社売上と突合可能に。
  契約検索に「担当営業未設定」絞り込みを追加。
- R6 fraction_rule注記: 勤怠グリッド・契約フォームに非適用の注記を表示。
- R7 細部整備: selectMonthlyGrid の月末判定を方言非依存化、未請求クエリに
  deleted_flag、単価コメント単位修正(万円→円)、金額表示の記号重複解消、設定単位注記。
- R8 請求書への適用税率保存: t_invoice.tax_rate を追加し生成時点の税率を固定、
  detail は保存値優先・NULLは設定へフォールバック。

DB: V27 マイグレーション追加、H2テストスキーマ同期。テスト全緑 (458件, smoke test は
Docker必要のためskip)。i18n 4言語追加。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018qW5RqkYT4h3RJZMgvoSqf